@@ -3,6 +3,7 @@ Changelog
 
 4.16-dev - (unreleased)
 -----------------------
+ * WIP: Changed GIS Application to be disk based product instead of TTW type [tiberich #4467]
 
 4.15 - (2012-02-06)
 -------------------
